--- a/src/app/componentes/liempleados/liempleados.component.html
+++ b/src/app/componentes/liempleados/liempleados.component.html
@@ -53,7 +53,7 @@
               </svg>
             </span>
           </summary>
-          <div class="flex justify-between items-center mt-4 ml-[67px]">
+          <div class="flex justify-between items-center mt-4 ">
             <div class="flex flex-col justify-start gap-1 mt-2">
               <p class="font-bold text-base">Telefono:</p>
               <p class="text-sm">{{ da.telefono }}</p>
@@ -76,17 +76,17 @@
                 data-te-target="#modalEliminoEmpleados"
                 data-te-ripple-init
                 data-te-ripple-color="light">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="rgb(239 68 68 )" class="cursor pointer w-6 h-6 text-red-500">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="rgb(239 68 68 )" class="cursor-pointer w-6 h-6 text-red-500">
                   <path fill-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm-1.72 6.97a.75.75 0 1 0-1.06 1.06L10.94 12l-1.72 1.72a.75.75 0 1 0 1.06 1.06L12 13.06l1.72 1.72a.75.75 0 1 0 1.06-1.06L13.06 12l1.72-1.72a.75.75 0 1 0-1.06-1.06L12 10.94l-1.72-1.72Z" clip-rule="evenodd" />
                 </svg>
               </a>
             </div>
           </div>
-          <div class="flex flex-col justify-start gap-1 mt-4 ml-[67px]">
+          <div class="flex flex-col justify-start gap-1 mt-4 ">
             <p class="font-bold text-base">Email:</p>
             <p class="text-sm">{{ da.email }}</p>
           </div>
-          <div class="flex flex-col justify-start gap-1 mt-4 mb-3 ml-[67px]">
+          <div class="flex flex-col justify-start gap-1 mt-4 mb-3 ">
             <p class="font-bold text-base">Domicilio:</p>
             <p class="text-sm">{{ da.direccion }}</p>
           </div>
