Cambio en el header de los modales edit y delete

--- a/src/app/componentes/liempleados/liempleados.component.html
+++ b/src/app/componentes/liempleados/liempleados.component.html
@@ -293,7 +293,7 @@
         class="flex flex-shrink-0 items-center justify-between rounded-t-md border-b-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50">
         <!--Modal title-->
         <h5 class="text-xl font-medium leading-normal text-neutral-800 dark:text-neutral-200" id="exampleModalLabel">
-          Editar información del empleado
+          Editar empleado
         </h5>
         <!--Close button-->
         <button
@@ -459,7 +459,7 @@
       <div class="flex flex-shrink-0 items-center justify-between rounded-t-md border-b-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50">
         <!--Modal title-->
         <h5 class="text-xl font-medium leading-normal text-neutral-800 dark:text-neutral-200" id="exampleModalLabel">
-          Editar información del empleado
+          Eliminar empleado
         </h5>
         <!--Close button-->
         <button
